# MLOPS_hw_1

./: README.md  all_together.ipynb  dashboard.py  ml_api.py  pyproject.toml
test_samples/: Y_classification.csv  Y_train.csv  sample_description.txt
