[project]
name = "mlops_homeworks"
version = "0.1.0"
description = ""
authors = [
    {name = "naketu",email = "aksenovnikita2015@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "wheel (==0.45.1)",
    "streamlit (>=1.51.0,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "altair (>=5.5.0,<6.0.0)",
    "fastapi (>=0.121.1,<0.122.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
